--- a/src/app/pages/admin/manage-rooms/manage-rooms.component.html
+++ b/src/app/pages/admin/manage-rooms/manage-rooms.component.html
@@ -71,8 +71,7 @@
         </div>
     </div>
 
-    <table *ngIf="!loading"
-        class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+    <table *ngIf="!loading" class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 mb-16">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
                 <th scope="col" class="p-3"
@@ -101,7 +100,7 @@
                 </td>
                 <td class="px-6 py-4">
                     <div class="flex items-center">
-                        <div class="h-2.5 w-2.5 rounded-full me-2"
+                        <div class="h-2.5 w-2.5 rounded-full me-2 animate-pulse"
                             [ngClass]="room.available? 'bg-green-500' : 'bg-red-500'"></div>{{room.available?
                         "Available" : "Not Available"}}
                     </div>
@@ -109,8 +108,24 @@
                 <td class="px-6 py-4">
                     Rs. {{room.price}}
                 </td>
-                <td class="centered-td px-6 py-4">
+                <td class="centered-td py-4">
                     <div class="flex gap-3 justify-center items-center">
+                        <button (click)="toogleAvailabilityRoom(room, !room.available); $event.stopPropagation()">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" *ngIf="room.available"
+                                class="w-6 h-6 text-gray-800 dark:text-white hover:scale-[1.05] transition-transform duration-200 ease-in-out transform-gpu"
+                                viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+                                <path
+                                    d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"
+                                *ngIf="!room.available"
+                                class="w-6 h-6 text-gray-800 dark:text-white hover:scale-[1.05] transition-transform duration-200 ease-in-out transform-gpu">>
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+                                <path
+                                    d="m10.97 4.97-.02.022-3.473 4.425-2.093-2.094a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05" />
+                            </svg>
+                        </button>
                         <button (click)="editRoom(room); $event.stopPropagation()">
                             <svg class="w-6 h-6 text-gray-800 dark:text-white hover:scale-[1.05] transition-transform duration-200 ease-in-out transform-gpu"
                                 aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -209,7 +224,7 @@
                         <label for="rating"
                             class="block text-sm font-medium text-gray-900 dark:text-white">Rating</label>
                         <input type="number" id="rating" name="rating" min="1" max="5" step="1.0" id="room-code"
-                            name="rating"  [(ngModel)]="newRoom.rating"
+                            name="rating" [(ngModel)]="newRoom.rating"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
                             placeholder="Enter room rating" required>
                     </div>
@@ -231,8 +246,7 @@
                         class="block text-sm font-medium text-gray-900 dark:text-white">Description</label>
                     <textarea id="description" rows="3" name="description" [(ngModel)]="newRoom.description"
                         class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                        placeholder="Describe the room"
-                        required></textarea>
+                        placeholder="Describe the room" required></textarea>
                 </div>
 
                 <!-- Features -->
@@ -328,7 +342,7 @@
                 </div>
 
                 <!-- Submit Button -->
-                <button type="submit" (click)="addRoom()"
+                <button type="submit" (click)="addRoom()" data-modal-toggle="room-input-modal"
                     class="mt-4 font-bold text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     Add Room
                 </button>
