--- a/src/app/pages/admin/manage-user/manage-user.component.html
+++ b/src/app/pages/admin/manage-user/manage-user.component.html
@@ -23,7 +23,8 @@
                             class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Admin</a>
                     </li>
                     <li><a (click)="setRoleFilter('Customer')"
-                            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Customer</a></li>
+                            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Customer</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -44,8 +45,7 @@
         </div>
     </div>
 
-    <table *ngIf="!loading"
-        class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+    <table *ngIf="!loading" class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
                 <th scope="col" class="p-3"
@@ -61,7 +61,7 @@
                     <img class="w-14 h-10" [src]="getUserImage(user.name)" alt="User">
                     <div class="ps-3">
                         <div class="font-normal text-gray-500">{{user.id}}</div>
-                        <div class="text-base font-semibold">{{user.name}}</div>
+                        <div class="text-base font-normal">{{user.name}}</div>
                     </div>
                 </th>
                 <td class="px-3 py-4">
@@ -72,7 +72,7 @@
                 </td>
                 <td class="px-3 py-4">
                     <div class="flex items-center">
-                        <div class="h-2.5 w-2.5 rounded-full me-2"
+                        <div class="h-2.5 w-2.5 rounded-full me-2 animate-pulse"
                             [ngClass]="user.role === 'Admin'? 'bg-purple-500' : 'bg-yellow-500'"></div>{{user.role}}
                     </div>
                 </td>
@@ -82,7 +82,7 @@
                 <td class="px-3 py-4">
                     {{formatDate(user.lastLogin)}}
                 </td>
-                <td class="centered-td px-3 py-4">
+                <td class="centered-td px-3 py-4" *ngIf="user.role !== 'customer'">
                     <div class="flex gap-3 justify-center items-center">
                         <button (click)="deleteUser(user); $event.stopPropagation()">
                             <svg class="w-6 h-6 text-gray-800 dark:text-white hover:scale-[1.05] transition-transform duration-200 ease-in-out transform-gpu"
@@ -156,100 +156,78 @@
             <form class="space-y-4">
                 <div class="grid grid-cols-2 gap-4">
                     <div class="col-span-2">
-                        <label for="user-name" class="block text-sm font-medium text-gray-900 dark:text-white">User
-                            Name</label>
-                        <input type="text" id="user-name" name="user-name"
+                        <label for="name" class="block text-sm font-medium text-gray-900 dark:text-white">Name</label>
+                        <input type="text" id="name" name="name" [(ngModel)]="newUser.name"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="Ocean View user" required>
-                    </div>
-
-                    <div>
-                        <label for="rating"
-                            class="block text-sm font-medium text-gray-900 dark:text-white">Rating</label>
-                        <input type="number" id="rating" name="rating" min="1" max="5" step="1.0" id="user-code"
-                            name="rating"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="5.0" required>
-                    </div>
-
-                    <!-- Price -->
-                    <div>
-                        <label for="price" class="block text-sm font-medium text-gray-900 dark:text-white">Price
-                            (Rs.)</label>
-                        <input type="number" id="price" name="price"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="150" required>
-                    </div>
-
-                </div>
-
-                <!-- Description -->
-                <div>
-                    <label for="description"
-                        class="block text-sm font-medium text-gray-900 dark:text-white">Description</label>
-                    <textarea id="description" rows="3" name="description"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                        placeholder="A cozy hall with stunning views of the ocean, ideal for solo travelers or business trips."
-                        required></textarea>
-                </div>
-
-                <!-- Features -->
-                <div class="grid grid-cols-2 gap-4">
-                    <div>
-                        <label for="type" class="block text-sm font-medium text-gray-900 dark:text-white">Type</label>
-                        <input type="text" id="type" name="type"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="Single" required>
-                    </div>
-                    <div>
-                        <label for="capacity"
-                            class="block text-sm font-medium text-gray-900 dark:text-white">Capacity</label>
-                        <input type="number" id="capacity" name="capacity"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="1" required>
+                            placeholder="Enter name" required>
                     </div>
                     <div class="col-span-2">
-                        <label for="features"
-                            class="block text-sm font-medium text-gray-900 dark:text-white">Features</label>
-                        <input type="text" id="features" name="features"
+                        <label for="email" class="block text-sm font-medium text-gray-900 dark:text-white">Email</label>
+                        <input type="text" id="email" name="email" [(ngModel)]="newUser.email"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="Air conditioning, Mini bar, Coffee maker" required>
+                            placeholder="Enter email" required>
                     </div>
-                    <div>
-                        <label for="bed-type" class="block text-sm font-medium text-gray-900 dark:text-white">Bed
-                            Type</label>
-                        <input type="text" id="bed-type" name="bed-type"
+                    <div class="col-span-2">
+                        <label for="user-name" class="block text-sm font-medium text-gray-900 dark:text-white">User
+                            Name</label>
+                        <input type="text" id="user-name" name="user-name" [(ngModel)]="newUser.username"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="Single" required>
+                            placeholder="Enter username" required>
                     </div>
-                    <div>
-                        <label for="view" class="block text-sm font-medium text-gray-900 dark:text-white">View</label>
-                        <input type="text" id="view" name="view"
+                    <div class="col-span-2 relative">
+                        <label for="user-name"
+                            class="block text-sm font-medium text-gray-900 dark:text-white">Password</label>
+                        <input [type]="showPassword ? 'text' : 'password'" id="user-name" name="user-name" [(ngModel)]="newUser.password"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="Ocean" required>
+                            placeholder="Enter password" required>
+                        <button type="button"
+                            class="absolute right-5 top-[2.75rem] transform -translate-y-1/2 cursor-pointer p-1 bg-transparent focus:outline-none"
+                            (click)="toggleShowPassword()">
+                            <svg *ngIf="!showPassword" class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                viewBox="0 0 24 24">
+                                <path stroke="#bbb" stroke-width="2"
+                                    d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z" />
+                                <path stroke="#bbb" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                            </svg>
+                            <svg *ngIf="showPassword" class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                viewBox="0 0 24 24">
+                                <path stroke="#bbb" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M3.933 13.909A4.357 4.357 0 0 1 3 12c0-1 4-6 9-6m7.6 3.8A5.068 5.068 0 0 1 21 12c0 1-3 6-9 6-.314 0-.62-.014-.918-.04M5 19 19 5m-4 7a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                            </svg>
+                        </button>
                     </div>
-                    <div>
-                        <label for="internet" class="block text-sm font-medium text-gray-900 dark:text-white">Internet
-                            Access</label>
-                        <select id="internet" name="internet"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white">
-                            <option value="Yes">Yes</option>
-                            <option value="No">No</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label for="television"
-                            class="block text-sm font-medium text-gray-900 dark:text-white">Television</label>
-                        <select id="television" name="television"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white">
-                            <option value="Yes">Yes</option>
-                            <option value="No">No</option>
-                        </select>
+                    <div class="col-span-2 relative">
+                        <label for="user-name"
+                            class="block text-sm font-medium text-gray-900 dark:text-white">Confirm Password</label>
+                        <input [type]="showConfirmPassword ? 'text' : 'password'" id="user-name" name="user-name" [(ngModel)]="confirmPassword"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
+                            placeholder="Re-enter password" required>
+                        <button type="button"
+                            class="absolute right-5 top-[2.75rem] transform -translate-y-1/2 cursor-pointer p-1 bg-transparent focus:outline-none"
+                            (click)="toggleShowConfirmPassword()">
+                            <svg *ngIf="!showPassword" class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                viewBox="0 0 24 24">
+                                <path stroke="#bbb" stroke-width="2"
+                                    d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z" />
+                                <path stroke="#bbb" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                            </svg>
+                            <svg *ngIf="showPassword" class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                viewBox="0 0 24 24">
+                                <path stroke="#bbb" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M3.933 13.909A4.357 4.357 0 0 1 3 12c0-1 4-6 9-6m7.6 3.8A5.068 5.068 0 0 1 21 12c0 1-3 6-9 6-.314 0-.62-.014-.918-.04M5 19 19 5m-4 7a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                            </svg>
+                        </button>
                     </div>
                 </div>
 
+                <h4 *ngIf="!passwordsMatch" class="text-red-600 font.md">Passwords do not match.</h4>
+
                 <!-- Submit Button -->
-                <button type="submit"
+                <button type="submit" (click)="addAdmin()"
                     class="mt-4 font-bold text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     Add Admin
                 </button>
